--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -176,6 +176,21 @@
 
             />
 
+
+        <Button
+            android:id="@+id/regist_btn_clearImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/regist_img_profileimage"
+            app:layout_constraintTop_toBottomOf="@id/regist_img_profileimage"
+            app:layout_constraintBottom_toTopOf="@id/regist_img_profileimage"
+            android:layout_marginStart="9dp"
+            android:text="이미지 사용안함"
+            android:visibility="gone"
+            android:textColor="@color/black"
+            android:background="@android:color/transparent"
+            />
+
         <Button
             android:id="@+id/regist_btn_register"
             android:layout_width="match_parent"
