--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -70,31 +70,33 @@
                         android:layout_height="33dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/btn_grey_border"
                         android:inputType="text"
-                        android:paddingEnd="5dp"
+                        android:paddingEnd="25dp"
                         android:paddingStart="5dp"
                         android:textColor="#000"
+                        android:textSize="15sp"
                         android:textColorHint="#000"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/main_search_txt"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/main_search_reviewtitle"
                         tools:ignore="LabelFor"
+                        tools:text="ddddddddd"
                         />
 
                     <ImageView
                         android:id="@+id/main_search_txt"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
-                        android:layout_marginBottom="10dp"
                         android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp"
                         android:gravity="center"
+                        android:onClick="@{onClickListener::onClick}"
                         android:src="@drawable/if_shop_search_1469731"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/main_search_edit"
+                        android:padding="9dp"
                         app:layout_constraintTop_toBottomOf="@id/main_search_reviewtitle"
                         />
 
