--- a/app/src/main/res/drawable/btn_grey_circle_border.xml
+++ b/app/src/main/res/drawable/btn_grey_circle_border.xml
@@ -2,6 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
     <stroke
-        android:width="1dp"
-        android:color="@color/darkGrey" />
+        android:width="0.5dp"
+        android:color="@color/midGey" />
+
+    <solid
+        android:color="@color/white"
+        />
 </shape>
