--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -12,6 +12,11 @@
             name="onClickListener"
             type="android.view.View.OnClickListener"
             />
+
+        <variable
+            name="item"
+            type="com.skh.reviewme.Setting.Model.SettingUserProfileModel"/>
+
     </data>
 
 
@@ -19,58 +24,149 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
         >
 
         <ImageView
             android:id="@+id/setting_img"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="65dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="35dp"
+            settingImageUrl="@{item.UserProfile}"
+            android:background="@drawable/btn_grey_circle_border"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
 
-            tools:src="@drawable/ic_launcher_background"
+            />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting_btn_changeimage"
+            android:layout_marginTop="25dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="프로필 사진 변경"
+            android:onClick="@{onClickListener::onClick}"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:background="@drawable/btn_grey_rec"
+            app:layout_constraintTop_toBottomOf="@id/setting_img"
             />
 
         <TextView
             android:id="@+id/setting_name_txt"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginTop="60dp"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{item.UserNick}"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
             android:textColor="#000"
             android:textSize="15sp"
-            android:gravity="center_vertical"
+            app:layout_constraintBottom_toTopOf="@id/setting_gender_txt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_img"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:text="SEOGKI HONG"
-            android:layout_marginStart="20dp"
             />
-        <TextView
-            android:id="@+id/setting_email_txt"
+
+
+        <View
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="0.5dp"
+            android:background="@color/darkGrey"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
+            />
+
+        <TextView
+            android:id="@+id/setting_gender_txt"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            app:checkGender="@{item.UserGender}"
             android:layout_marginEnd="20dp"
             android:textSize="13sp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
+            app:layout_constraintBottom_toTopOf="@id/setting_age_txt"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="#000"
-            tools:text="seogkihong333@gmail.com"
+            tools:text="M"
             />
 
         <View
-            android:id="@+id/view_above_logoutbtn"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            app:layout_constraintBottom_toTopOf="@id/setting_btn_out"
-            android:background="@color/grey"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:background="@color/darkGrey"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
+            />
+
+        <TextView
+            android:id="@+id/setting_age_txt"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="20dp"
+            android:textSize="13sp"
+            android:text="@{item.UserAge}"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/setting_email_txt"
+            android:textColor="#000"
+            tools:text="23"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:background="@color/darkGrey"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
+            />
+
+
+        <TextView
+            android:id="@+id/setting_email_txt"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="20dp"
+            android:textSize="13sp"
+            android:text="@{item.UserEmail}"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/setting_img"
+            android:textColor="#000"
+            tools:text="seogkihong333ffwer@gmail.com"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:background="@color/darkGrey"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_email_txt"
             />
 
         <Button
@@ -80,31 +176,13 @@
             android:text="로그아웃"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:background="#fff"
+            android:background="@drawable/btn_grey_rec"
+            android:onClick="@{onClickListener::onClick}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             />
-
-        <!--<View-->
-            <!--android:id="@+id/view_below_logoutbtn"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="1dp"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--android:background="@color/grey"-->
-            <!--/>-->
-
-        <!--android:layout_marginBottom="50dp"-->
-        <!--android:layout_marginStart="20dp"-->
-        <!--android:layout_marginEnd="20dp"-->
-
-
-
-
-
-
-
-
 
     </android.support.constraint.ConstraintLayout>
 
