시간 변경 및 문의사항 칸 추가

--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -72,6 +72,7 @@
                         android:inputType="text"
                         android:paddingEnd="12dp"
                         android:textSize="15sp"
+                        android:imeOptions="actionSearch"
                         android:paddingStart="5dp"
                         android:textColor="#000"
                         android:textColorHint="#000"
