--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="darkGrey">#8D8D8D</color>
     <color name="midGey">#E5E5E5</color>
     <color name="trans">#8f000000</color>
+    <color name="DarkGreen">#13A9AA</color>
 </resources>
