--- a/app/src/main/res/layout/item_community_inner.xml
+++ b/app/src/main/res/layout/item_community_inner.xml
@@ -59,11 +59,11 @@
         <ImageView
             android:id="@+id/comment_img_like"
             android:layout_width="50dp"
-            android:layout_height="0dp"
+            android:layout_height="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/icons8_two_hearts_24"
+            android:src="@drawable/outline_thumb_up_alt_black_24dp"
             android:layout_marginBottom="25dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="10dp"
@@ -72,7 +72,7 @@
         <TextView
             android:id="@+id/comment_text_comment"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
@@ -80,7 +80,7 @@
             android:textSize="14sp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
+            app:layout_constraintEnd_toStartOf="@id/comment_img_like"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/comment_text_nickname"
             android:layout_marginBottom="5dp"
