--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -94,7 +94,7 @@
 
         <TextView
             android:id="@+id/text_regi_comment"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_marginEnd="25dp"
             android:layout_marginTop="15dp"
