--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,15 @@
         <item name="android:background">@color/white</item>
     </style>
 
+
+    <style name="textStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="MyRadioButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/darkGrey</item>
+        <item name="colorControlActivated">@color/black</item>
+    </style>
+
 </resources>
