retrofit 에 rxjava 추가 뷰 변경

--- a/app/src/main/res/layout/fragment_community_inner.xml
+++ b/app/src/main/res/layout/fragment_community_inner.xml
@@ -107,7 +107,7 @@
                     android:text="@{item.title}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toTopOf="@id/inner_txt_content"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/view_profile_bottom"
@@ -124,7 +124,6 @@
                     android:text="@{item.text}"
                     android:textColor="@color/black"
                     android:textSize="13sp"
-                    app:layout_constraintBottom_toTopOf="@id/view_content_bottom"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inner_txt_titles"
@@ -136,7 +135,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.3dp"
                     android:layout_marginTop="13dp"
-                    app:layout_constraintBottom_toTopOf="@id/inner_img_first"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inner_txt_content"
@@ -145,14 +143,12 @@
 
                 <ImageView
                     android:id="@+id/inner_img_first"
-                    android:layout_width="0dp"
-                    android:layout_height="160dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     app:innerCommunityImageUrl="@{item.image1}"
-                    app:layout_constraintBottom_toTopOf="@id/inner_img_third"
-                    app:layout_constraintEnd_toStartOf="@id/inner_img_second"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/view_content_bottom"
                     tools:src="@drawable/test_10"
@@ -161,47 +157,42 @@
 
                 <ImageView
                     android:id="@+id/inner_img_second"
-                    android:layout_width="0dp"
-                    android:layout_height="160dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     app:innerCommunityImageUrl="@{item.image2}"
-                    app:layout_constraintBottom_toTopOf="@id/inner_img_fourth"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/inner_img_first"
-                    app:layout_constraintTop_toBottomOf="@id/view_content_bottom"
-                    app:layout_constraintVertical_chainStyle="spread_inside"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_first"
+                    app:layout_constraintStart_toStartOf="parent"
                     tools:src="@drawable/test_10"
                     />
 
                 <ImageView
 
                     android:id="@+id/inner_img_third"
-                    android:layout_width="0dp"
-                    android:layout_height="160dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     app:innerCommunityImageUrl="@{item.image3}"
-                    app:layout_constraintEnd_toStartOf="@id/inner_img_fourth"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/inner_img_first"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_second"
                     tools:src="@drawable/test_10"
                     />
 
                 <ImageView
                     android:id="@+id/inner_img_fourth"
-                    android:layout_width="0dp"
-                    android:layout_height="160dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     app:innerCommunityImageUrl="@{item.image4}"
 
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/inner_img_third"
-                    app:layout_constraintTop_toBottomOf="@id/inner_img_second"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_third"
                     tools:src="@drawable/test_10"
                     />
 
