--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="midGey">#E5E5E5</color>
     <color name="trans">#8f000000</color>
     <color name="DarkGreen">#13A9AA</color>
+    <color name="ddGreen">#078f87</color>
 </resources>
