--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,13 @@
     tools:context="com.skh.reviewme.Login.ReviewRegister.RegisterActivity"
     >
 
+    <data>
+
+        <variable
+            name="onClickListener"
+            type="android.view.View.OnClickListener"
+            />
+    </data>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/regist_constraint"
@@ -168,6 +175,7 @@
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/regist_txt_profileimage"
             app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="@{onClickListener::onClick}"
             android:background="@drawable/btn_grey_circle_border"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="15dp"
@@ -181,6 +189,7 @@
             android:id="@+id/regist_btn_clearImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{onClickListener::onClick}"
             app:layout_constraintStart_toEndOf="@id/regist_img_profileimage"
             app:layout_constraintTop_toBottomOf="@id/regist_img_profileimage"
             app:layout_constraintBottom_toTopOf="@id/regist_img_profileimage"
@@ -199,6 +208,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginBottom="15dp"
             android:text="회원가입"
+            android:onClick="@{onClickListener::onClick}"
             android:textColor="#fff"
             android:background="@drawable/btn_color_border"
             app:layout_constraintEnd_toEndOf="parent"
